errors.txt
Rotor.java:16: error: cannot find symbol
		this.rotorSetting = 0;
		    ^
  symbol: variable rotorSetting
Rotor.java:17: error: cannot find symbol
		this.rotorNumber = 0;
		    ^
  symbol: variable rotorNumber
Rotor.java:22: error: cannot find symbol
		letter = letter + rotorSetting;
		                  ^
  symbol:   variable rotorSetting
  location: class Rotor
Rotor.java:34: error: cannot find symbol
		if(rotorNumber == 1)
		   ^
  symbol:   variable rotorNumber
  location: class Rotor
Rotor.java:36: error: cannot find symbol
			rotorSettings++;
			^
  symbol:   variable rotorSettings
  location: class Rotor
Rotor.java:37: error: non-static variable startNumber cannot be referenced from a static context
			startNumber++;
			^
Rotor.java:38: error: non-static variable startNumber cannot be referenced from a static context
			if (startNumber >= 26)
			    ^
Rotor.java:40: error: cannot find symbol
				rotor2.setSetting(rotor2.getSetting()+1);
				                  ^
  symbol:   variable rotor2
  location: class Rotor
Rotor.java:40: error: cannot find symbol
				rotor2.setSetting(rotor2.getSetting()+1);
				^
  symbol:   variable rotor2
  location: class Rotor
Rotor.java:41: error: cannot find symbol
				if (rotor2.getStartNumber() >= 26 )
				    ^
  symbol:   variable rotor2
  location: class Rotor
Rotor.java:43: error: cannot find symbol
					rotor3.setSetting(rotor3.getSetting()+1);
					                  ^
  symbol:   variable rotor3
  location: class Rotor
Rotor.java:43: error: cannot find symbol
					rotor3.setSetting(rotor3.getSetting()+1);
					^
  symbol:   variable rotor3
  location: class Rotor
Rotor.java:52: error: cannot find symbol
		this.rotorSetting = rotorSetting;
		    ^
  symbol: variable rotorSetting
Rotor.java:53: error: cannot find symbol
		this.rotorNumber = rotorNumber;
		    ^
  symbol: variable rotorNumber
Rotor.java:57: error: cannot find symbol
		return rotorSetting;
		       ^
  symbol:   variable rotorSetting
  location: class Rotor
Rotor.java:61: error: cannot find symbol
		this.rotorSetting = rotorSetting;
		    ^
  symbol: variable rotorSetting
Machine.java:58: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor1.changeLetter(letterNum,rotor2,rotor3);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:59: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor2.changeLetter(letterNum,rotor1,rotor3);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:60: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor3.changeLetter(letterNum,rotor1,rotor2);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:62: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor3.changeLetter(letterNum,rotor1,rotor2);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:63: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor2.changeLetter(letterNum,rotor1,rotor3);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:64: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor1.changeLetter(letterNum,rotor2,rotor3);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:104: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor1.changeLetter(letterNum,rotor2,rotor3);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:105: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor2.changeLetter(letterNum,rotor1,rotor3);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:106: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor3.changeLetter(letterNum,rotor1,rotor2);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:107: error: cannot find symbol
				letterNum=relflector.changeLetter(letterNum);
				          ^
  symbol:   variable relflector
  location: class Machine
Machine.java:108: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor3.changeLetter(letterNum,rotor1,rotor2);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:109: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor2.changeLetter(letterNum,rotor1,rotor3);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
Machine.java:110: error: method changeLetter in class Rotor cannot be applied to given types;
				letterNum=rotor1.changeLetter(letterNum,rotor2,rotor3);
				                ^
  required: int
  found: int,Rotor,Rotor
  reason: actual and formal argument lists differ in length
29 errors
